refactor: ADjusting exceptions